tests/checker/ok/string_escapes.can
main = () => Unit {
    "hello\tworld\n" -> Print
    "quote: \"hi\"" -> Print
    "backslash: \\" -> Print
}
