tests/checker/fail/method_ordering_violation.can
Greeting = String

shout = (Greeting) => String {
    "HELLO"
}

murmur = (Greeting) => String {
    "hello"
}

Unit => Program {
    Greeting("hi")
        .shout()
        .print()
}
